# TPDjangoCRUD

./: README.md  manage.py  pyproject.toml
TPDjangoCrud/: asgi.py  settings.py  urls.py  wsgi.py
bibliotheque/: forms.py  models.py  urls.py  views.py
bibliotheque/migrations/: 0001_initial.py  0002_categorie_livre_categorie.py
bibliotheque/templates/: main.jinja
bibliotheque/templates/bibliotheque/: affiche.jinja  ajout.jinja  ajout_success.jinja  all.jinja  delete_success.jinja  hello.jinja  update.jinja
bibliotheque/templates/bibliotheque/categorie/: add.jinja  add_success.jinja  all.jinja  delete_success.jinja  read.jinja  update.jinja
bibliotheque/templates/bibliotheque/livre/: add.jinja  addNoCategorie.jinja  add_success.jinja  all.jinja  delete_success.jinja  read.jinja  update.jinja
bibliotheque/templates/skeletons/: categorie.jinja  livre.jinja  main.jinja
bibliotheque/views/: __init__.py  categorie.py  livre.py  root.py
